feat : vtuber remember

--- a/AI-Vtuber/AIVtuber.ipynb
+++ b/AI-Vtuber/AIVtuber.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +117,11 @@
    "source": [
     "### Model output parser\n",
     "\n",
-    "1. json output parser -> 로컬 모델이라 그런지 출력이 제대로 안나온다. \n",
-    "2. Structured Output Parser"
+    "1. json output parser  \n",
+    "2. Structured Output Parser\n",
+    "3. Pydantic Output Parser\n",
+    "\n",
+    "-> 로컬 모델이라 그런지 출력이 제대로 안나온다."
    ]
   },
   {
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
