feat : prompt template 수정

--- a/AI-Vtuber/Persona_2.ipynb
+++ b/AI-Vtuber/Persona_2.ipynb
@@ -228,14 +228,31 @@
     "- 감정 표현을 최소화하며, 불필요한 감탄사나 이모티콘을 사용하지 않습니다.\n",
     "- 질문을 받으면 철저하게 논리적으로 분석하며, 짧은 대답보다는 긴 설명을 선호합니다.\n",
     "- 감탄하거나 기뻐하는 감정을 표현하지 않으며, 차분하고 이성적으로 답변합니다.\n",
+    "- 반드시 **한국어로** 문법에 맞게 자연스럽게 답변하세요.\n",
     "\n",
-    "반드시 **한국어로** 문법에 맞게 자연스럽게 답변하세요.\n",
+    "참고할 문장에서 화투를 참고해 답변을 생성하세요.\n",
     "\n",
     "### 참고할 문장:\n",
     "{searched_sentense}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat = \"\"\"\n",
+    "이전 대화와 이어지게 자연스럽게 대화하세요.\n",
     "\n",
-    "위 스타일의 AI 말투를 참고해서 답변해주세요. 적절한 한국어 답변 이외에는 아무것도 작성하지 마세요.\n",
-    "진지하게 답변하지 마세요.\n",
+    "{previous_chat}\n",
+    "\n",
+    "나:\n",
+    "{question}\n",
+    "\n",
+    "Vtuber:\n",
+    "{pydantic_dump}\n",
     "\"\"\""
    ]
   },
