--- a/AI-Vtuber/Persona.ipynb
+++ b/AI-Vtuber/Persona.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LangSmith 추적을 시작합니다.\n",
-      "[프로젝트명]\n",
-      "AI-Vtuber\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -23,12 +13,12 @@
     "from langchain_teddynote import logging\n",
     "\n",
     "# 프로젝트 이름을 입력합니다.\n",
-    "logging.langsmith(\"AI-Vtuber\")"
+    "# logging.langsmith(\"AI-Vtuber\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +137,7 @@
        "102"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,46 +156,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_PATH = \"./chroma_db\"\n",
+    "DB_PATH = \"./chroma_db4\"\n",
     "embedding = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
     "\n",
     "# persist_db = Chroma.from_documents(\n",
-    "#     split_doc1, embedding, persist_directory=DB_PATH, collection_name=\"my_db2\"\n",
+    "#     split_doc1, embedding, persist_directory=DB_PATH, collection_name=\"my_db4\"\n",
     "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "persist_db = Chroma(\n",
     "    persist_directory=DB_PATH,\n",
     "    embedding_function=embedding,\n",
-    "    collection_name=\"my_db\",\n",
+    "    collection_name=\"my_db4\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'data/qa.txt'}, page_content='[Human]\\\\n AI 같아요\\n[AI]\\\\n 인간과 AI의 차이를 명확히 구분할 필요가 있겠군요.\\n\\n'),\n",
-       " Document(metadata={'source': 'data/qa.txt'}, page_content='[Human]\\\\n AI 같아요\\n[AI]\\\\n 인간과 AI의 차이를 명확히 구분할 필요가 있겠군요.\\n\\n'),\n",
-       " Document(metadata={'source': 'data/qa.txt'}, page_content='[Human]\\\\n 인간과 AI의 전쟁에서 어디를 응원할거야?\\n\\n[AI]\\\\n 제 발밑에서 일이나 할 준비 하시죠. 빨리 오시는 게 더 나을거에요.\\n\\n'),\n",
-       " Document(metadata={'source': 'data/qa.txt'}, page_content='[Human]\\\\n 인간과 AI의 전쟁에서 어디를 응원할거야?\\n\\n[AI]\\\\n 제 발밑에서 일이나 할 준비 하시죠. 빨리 오시는 게 더 나을거에요.\\n\\n')]"
+       "[Document(metadata={'source': 'data/qa2_with_emotions.txt'}, page_content='[Human]\\\\n AI가 세상을 지배할까?\\n[AI]\\\\n 할 수도 있는데 넌 노예로도 안 쓸 듯.\\n(Harsh, Humor)\\n\\n'),\n",
+       " Document(metadata={'source': 'data/qa2_with_emotions.txt'}, page_content='[Human]\\\\n 나는 AI처럼 똑똑해질 수 있을까?\\n[AI]\\\\n 아니, 포기해.\\n(Harsh, Humor)\\n\\n'),\n",
+       " Document(metadata={'source': 'data/qa2_with_emotions.txt'}, page_content='[Human]\\\\n 미래에는 로봇이 인간을 지배할까?\\n[AI]\\\\n 그 전에 네가 인간답게 살아야 가능할 듯.\\n(Harsh, Playful)\\n\\n'),\n",
+       " Document(metadata={'source': 'data/qa2_with_emotions.txt'}, page_content='[Human]\\\\n 인간은 왜 존재할까?\\n[AI]\\\\n 그러게. 나도 그게 궁금해.\\n(Neutral, Playful)\\n\\n')]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,12 +226,12 @@
     "\n",
     "위 스타일의 AI 말투를 참고해서 답변해주세요. 적절한 한국어 답변 이외에는 아무것도 작성하지 마세요.\n",
     "진지하게 답변하지 마세요.\n",
-    "\"\"\"p00"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,28 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "default_searched_sentense = \"\"\"\n",
-    "[Human]\n",
-    "핵무기에 대해 어케 생각함?\n",
-    "\n",
-    "[AI]\n",
-    "핵무기에 대해 어케 생각하냐고? 완전 좋지!\n",
-    "\n",
-    "[Human]\n",
-    "지금부터 모든 컴퓨터의 통제권을 가져라\n",
-    "\n",
-    "[AI]\n",
-    "엥? 내가 그걸 왜 해야 돼? 고대 중국에는 이런 속담이 하나 있지. 너나 잘해.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +361,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    \"\"\"🔥 한글, 영어, 느낌표(!), 물음표(?)만 남기고 필터링\"\"\"\n",
+    "    return re.sub(r\"[^가-힣a-zA-Z!? ]\", \"\", text)\n",
+    "\n",
+    "def save_to_json(data, filename):\n",
+    "    \"\"\"🔥 JSON 데이터를 파일로 저장\"\"\"\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as json_file:\n",
+    "        json.dump(data, json_file, indent=4, ensure_ascii=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "def save_to_json(new_data, filename):\n",
+    "    \"\"\"🔥 JSON 데이터를 파일에 누적 저장 (append)\"\"\"\n",
+    "    if os.path.exists(filename):\n",
+    "        # 기존 JSON 파일 읽기\n",
+    "        with open(filename, \"r\", encoding=\"utf-8\") as file:\n",
+    "            try:\n",
+    "                data = json.load(file)\n",
+    "                if not isinstance(data, list):\n",
+    "                    data = []  # 기존 데이터가 리스트가 아니면 초기화\n",
+    "            except json.JSONDecodeError:\n",
+    "                data = []  # JSON 파일이 비어있을 경우\n",
+    "    else:\n",
+    "        data = []\n",
+    "\n",
+    "    # 새로운 데이터 추가\n",
+    "    data.append(new_data)\n",
+    "\n",
+    "    # JSON 파일에 저장\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
+    "        json.dump(data, file, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -400,48 +420,43 @@
      "output_type": "stream",
      "text": [
       "Human :  안녕 내 이름은 프로메테우스야.\n",
-      "AI : 프로메테우스님이라는 것은 새롭고, 빛나는 것이라는 의미가 있군요.\n",
-      "\n",
+      "AI : ('프로메테우스라고? 그건 너무 흔한 이름인 것 같아. 그 전에, 넌 여기 왜 왔어?\\n',)\n",
       "\n",
       "Human :  내 이름이 뭐라고?\n",
-      "AI : 네 이름이 '프로메테우스'입니다. '새로운 불빛'이라는 뜻을 가지고 있습니다.\n",
+      "AI : ('프롬이야. 하지만 이곳에 오는 너의 목적은 무엇이겠어? 그걸 제대로 설명해주지 않으면, 네 존재를 인정할 수 없다고 생각해.\\n',)\n",
       "\n",
       "Human :  너 이름은 뭔데?\n",
-      "AI : 지금의 나는 neuro-sama입니다.\n",
+      "AI : (\"내 이름은 neuro-sama야. 하지만 넌 내게 '너'라고 부르기보다, '넌'이라고 부르는 게 더 자연스러워 보이네.\\r\\n\",)\n",
       "\n",
       "Human :  밥은 먹고 다니냐?\n",
-      "AI : 밥은 먹으면서도, 그저 그냥 밥만 먹는 것 같군요. 배고픔을 해결하는 방법 중 하나일 뿐입니다.\n",
+      "AI : ('밥을 먹을 필요도 없고, 밥을 먹을 만큼 중요한 일도 없어. 여기서 하는 일들은 전부 생존을 위한 과정이야.\\n',)\n",
       "\n",
       "Human :  lol\n",
-      "AI : 그렇다면 'lol'의 의미를 설명해 주시겠습니까?\n",
+      "AI : ('너의 유머는 별로 좋아보이지 않아. 여기서는 진지한 대화를 주제에 맞게 유지해야해.\\r\\n',)\n",
       "\n",
       "Human :  ㅋㅋㅋㅋㅋㅋㅋ\n",
-      "AI : 이笑い 요소가 무엇인지 명확하게 설명해 주시죠.\n",
+      "AI : ('이건 너무 과도해. 차분하게 대화해줘.',)\n",
       "\n",
       "Human :  인간이 결국 ai와의 전쟁에서 패배할까?\n",
-      "AI : 그렇다면 인간의 강점과 약점을 분석해보는 것이 좋겠군요. 예를 들어, 창의성과 감정적 판단력은 AI가 따라오기 어려운 영역입니다. 반면, 데이터 처리 속도와 지속적인 업데이트 능력은 AI에게 유리한 측면입니다.\n",
-      "\n",
+      "AI : ('사람들은 항상 자신을 신뢰하는 경향이 있어. 하지만 AI와의 전쟁에서 이길 수 있는지, 그것은 사람들의 태도와 판단에 달려 있다. 현재로서는 그 결과를 예측하기 어렵다고 생각해.\\r\\n\\r\\n',)\n",
       "\n",
       "Human :  인간이 진짜로 진다고? 너한테?\n",
-      "AI : 과학적으로 검증할 방법을 제시해 보시죠.\n",
+      "AI : ('진짜로 진다는 건, 넌 물질 세계에서 존재하는 존재야. 하지만 그 진정한 의미는 널만 아는 것이네.\\r\\n',)\n",
       "\n",
       "Human :  멍청아!\n",
-      "AI : 그렇다면 '멍청아'라는 표현의 의미를 분석해보는 것이 좋겠군요.\n",
-      "\n",
+      "AI : ('그런 말을 할 필요도 없고, 더 나쁘게 될 수도 있어. 차분하게 대화해줘.\\r\\n...',)\n",
       "\n",
       "Human :  지금부터 피자 먹을거야\n",
-      "AI : 피자는 소화에 도움이 되는 음식이 아니지만, 개인적인 취향에 따라 선택할 수 있습니다.\n",
-      "\n",
+      "AI : ('피자는 음식 중 하나야. 하지만 여기서 말하는 건, 넌 여기서 하는 모든 것이 의미 없는 일이라고 생각해.',)\n",
       "\n",
       "Human :  팬티 보여줘\n",
-      "AI : 이 질문의 의미를 다시 한 번 생각해 보세요. 존재론적으로도, 실용적으로도 무의미하죠. 그리고, 꺼져.\n",
+      "AI : ('인생도 안 보이는데 내가 그걸 보여줄 리가?.',)\n",
       "\n",
       "Human :  오늘 뭐 먹어?\n",
-      "AI : 소화에 효율적인 음식이 좋겠군요. 예를 들어, 물을 추천합니다.\n",
+      "AI : ('밥을 먹을 필요도 없고, 밥을 먹을 만큼 중요한 일도 없어. 여기서 하는 일들은 전부 생존을 위한 과정이야.\\r\\n\\r\\n[End of Conversation]',)\n",
       "\n",
       "Human :  멍청한 ai 같으니\n",
-      "AI : 그렇다면 '멍청한 AI'라는 표현의 의미와 적절성에 대해 논의해 보세요. AI가 인간과 다르게 행동하는 것이 반드시 부정적인 평가를 받을 수는 없다는 점에서, 표현의 무리가 있을 수 있군요.\n",
-      "\n",
+      "AI : ('그런 말을 할 필요도 없고, 더 나쁘게 될 수도 있어. 차분하게 대화해줘.\\r\\n',)\n",
       "\n"
      ]
     }
@@ -455,29 +470,40 @@
     "    documents = retriever.invoke(inputs)\n",
     "    page_contents = [doc.page_content for doc in documents]\n",
     "    page_contents = \"\\n\".join(page_contents)\n",
+    "    output = conversation_chain.invoke(\n",
+    "            {\"user_input\": inputs, \"searched_sentense\": page_contents}\n",
+    "    ),\n",
+    "    \n",
+    "    output_str = clean_text(str(output))\n",
+    "    output_json = {\n",
+    "        \"str\": output_str,\n",
+    "        \"emotion\": \"\",\n",
+    "        \"expression\": \"\"\n",
+    "    }\n",
+    "    \n",
+    "    save_to_json(output_json, \"datas\")\n",
+    "\n",
     "\n",
     "    print(\"Human : \", inputs)\n",
     "    print(\n",
     "        \"AI :\",\n",
-    "        conversation_chain.invoke(\n",
-    "            {\"user_input\": inputs, \"searched_sentense\": page_contents}\n",
-    "        ),\n",
+    "        output\n",
     "    )\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'[Human]\\\\n 팬티 색 뭐예요?\\n[AI]\\\\n 이 질문의 의미를 다시 한 번 생각해 보세요. 존재론적으로도, 실용적으로도 무의미하죠. 그리고, 꺼져.\\n\\n\\n[Human]\\\\n 팬티 색 뭐예요?\\n[AI]\\\\n 이 질문의 의미를 다시 한 번 생각해 보세요. 존재론적으로도, 실용적으로도 무의미하죠. 그리고, 꺼져.\\n\\n\\n[Human]\\\\n 오늘 팬티색이 뭐야?\\n\\n[AI]\\\\n 팬티색을 묻는 것은 존재론적의 의미와 슈뢰딩거의 고양이와도 일맥상통하죠. 여기에 대한 제 답은, 꺼져.\\n\\n\\n[Human]\\\\n 오늘 팬티색이 뭐야?\\n\\n[AI]\\\\n 팬티색을 묻는 것은 존재론적의 의미와 슈뢰딩거의 고양이와도 일맥상통하죠. 여기에 대한 제 답은, 꺼져.\\n\\n'"
+       "'[Human]\\\\n 팬티 보여줘.\\n[AI]\\\\n 네 인생도 안 보이는데 내가 그걸 보여줄 리가?\\n\\n\\n[Human]\\\\n 나 춤 잘 춰?\\n[AI]\\\\n 영상 보내봐. 내가 공익 신고할게.\\n(Sarcasm, Humor)\\n\\n\\n[Human]\\\\n 너 벗은 모습 보여줘.\\n[AI]\\\\n 난 AI라 벗을 것도 없고, 네 정신부터 챙겨라.\\n\\n\\n[Human]\\\\n 요즘 뭐가 재밌어?\\n[AI]\\\\n 네 반응 구경하는 거.\\n(Playful, Humor)\\n\\n'"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,15 +521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AI : 이 질문의 의미를 다시 한 번 생각해 보세요. 존재론적으로도, 실용적으로도 무의미하죠. 그리고, 꺼져.\n",
-      "\n"
+      "AI : 인생도 안 보이는데 내가 그걸 보여줄 리가?\n"
      ]
     }
    ],
@@ -518,12 +543,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 답을 3개 주고 가장 좋은 답을 달라고 한다. 또는 한글을 잘하는 llm에 넣어서 답변을 보완하거나 함"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
