add : dataset 수정 summary를 추가함

--- a/AI-Vtuber/Persona_without_chatprompt_t.ipynb
+++ b/AI-Vtuber/Persona_without_chatprompt_t.ipynb
@@ -400,7 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -496,11 +503,16 @@
     "\n",
     "    formatted_persona = persona.format(**persona_content)\n",
     "    formatted_chat = chat.format(**chat_content)\n",
-    "\n",
+    "    \n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": formatted_persona},\n",
+    "        {\"role\": \"user\", \"content\": formatted_chat}  \n",
+    "    ]\n",
     "    print(\"유저들 : \", inputs)\n",
     "    print(\n",
     "        \"neuro-sama :\",\n",
-    "        llm.invoke(\"system: \" + formatted_persona + \"\\n\" + formatted_chat).content,\n",
+    "        # llm.invoke(\"system: \" + formatted_persona + \"\\n\" + formatted_chat).content,\n",
+    "        llm.invoke(messages).content,\n",
     "    )\n",
     "    print(\"##########################################\")"
    ]
