--- a/AI-Vtuber/SNSdata_parsing.ipynb
+++ b/AI-Vtuber/SNSdata_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
       "D:/workspace/sns_dataset/한국어 SNS/Training/[라벨]한국어SNS_train/일과직업.json\n",
       "D:/workspace/sns_dataset/한국어 SNS/Training/[라벨]한국어SNS_train/주거와생활.json\n",
       "D:/workspace/sns_dataset/한국어 SNS/Training/[라벨]한국어SNS_train/행사.json\n",
-      "✅ CSV 파일 저장 완료: utterances.csv\n"
+      "✅ CSV 파일 저장 완료: utterances_v2.csv\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
     "\n",
     "# 파일 경로 설정\n",
     "input_json_file = path + '개인및관계.json'  # 대용량 JSON 파일\n",
-    "output_csv_file = \"utterances.csv\"  # 출력할 CSV 파일\n",
+    "output_csv_file = \"utterances_v2.csv\"  # 출력할 CSV 파일\n",
     "\n",
     "# CSV 파일을 열고 헤더 없이 저장\n",
     "with open(output_csv_file, \"w\", encoding=\"utf-8\", newline=\"\") as csv_file:\n",
@@ -73,7 +73,10 @@
     "            # \"data\" 키 안의 리스트 순회\n",
     "            for item in data[\"data\"]:\n",
     "                for entry in item[\"body\"]:  # \"body\" 안에서 utterance 추출\n",
-    "                    writer.writerow([entry[\"utterance\"]])  # utterance 값만 CSV에 저장\n",
+    "                    writer.writerow([entry[\"participantID\"]+ \": \" + entry[\"utterance\"]])  # utterance 값만 CSV에 저장\n",
+    "                \n",
+    "                \n",
+    "                writer.writerow([\"<End_Of_Conversation>\"])\n",
     "\n",
     "print(f\"✅ CSV 파일 저장 완료: {output_csv_file}\")\n",
     "\n",
@@ -82,14 +85,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 필터링 완료! 저장된 파일: chat.csv\n"
+      "['01-QA-Pair-GPT.ipynb', 'AIVtuber.ipynb', 'chat.csv', 'chroma_db', 'chroma_db2', 'chroma_db3', 'chroma_db4', 'chroma_db5', 'chroma_db6', 'chroma_db7', 'data', 'datas.json', 'datas_2.json', 'data_IwithVtuber', 'Persona.ipynb', 'Persona_2.ipynb', 'Persona_without_chatprompt_t.ipynb', 'qa_pair copy.jsonl', 'qa_pair.jsonl', 'SNSdata_parsing.ipynb', 'test', 'utterances.csv', 'utterances_v2.csv', 'vtuber_finetuning.ipynb', 'Vtuber_Remem copy.ipynb', 'Vtuber_Remem.ipynb']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "files = os.listdir(\".\")\n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 필터링 완료! 저장된 파일: chat_2.csv\n"
      ]
     }
    ],
@@ -99,8 +121,8 @@
     "\n",
     "import csv\n",
     "\n",
-    "input_csv_file = \"utterances.csv\"  # 기존 CSV 파일\n",
-    "output_csv_file = \"chat.csv\"  # 필터링된 CSV 파일\n",
+    "input_csv_file = \"utterances_v2.csv\"  # 기존 CSV 파일\n",
+    "output_csv_file = \"chat_2.csv\"  # 필터링된 CSV 파일\n",
     "\n",
     "# CSV 파일 열기 및 필터링\n",
     "with open(input_csv_file, \"r\", encoding=\"utf-8\") as infile, open(output_csv_file, \"w\", encoding=\"utf-8\", newline=\"\") as outfile:\n",
