--- a/AI-Vtuber/vtuber_finetuning.ipynb
+++ b/AI-Vtuber/vtuber_finetuning.ipynb
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "f19a1c4a",
       "metadata": {},
       "outputs": [
@@ -157,13 +157,14 @@
       ],
       "source": [
         "import torch\n",
+        "\n",
         "print(torch.__version__)\n",
         "print(torch.cuda.is_available())  # GPU가 사용 가능한지 확인\n",
         "print(torch.version.cuda)  # CUDA 버전 확인\n",
         "\n",
         "import triton\n",
-        "print(triton.__version__)  # Triton 버전 출력\n",
-        "\n"
+        "\n",
+        "print(triton.__version__)  # Triton 버전 출력"
       ]
     },
     {
@@ -383,10 +384,10 @@
         "    \"unsloth/llama-3-8b-bnb-4bit\",  # Llama-3 8B\n",
         "]  # 더 많은 모델은 https://huggingface.co/unsloth 에서 확인할 수 있습니다.\n",
         "\n",
-        "model, tokenㄴizer = FastLanguageModel.from_pretrained(\n",
+        "model, tokenizer = FastLanguageModel.from_pretrained(\n",
         "    # model_name = \"unsloth/llama-3-8b-bnb-4bit\",\n",
         "    # model_name=\"beomi/Llama-3-Open-Ko-8B-Instruct-preview\",  # 모델 이름을 설정합니다.\n",
-        "    model_name = \"MLP-KTLim/llama-3-Korean-Bllossom-8B\",\n",
+        "    model_name=\"MLP-KTLim/llama-3-Korean-Bllossom-8B\",\n",
         "    max_seq_length=max_seq_length,  # 최대 시퀀스 길이를 설정합니다.\n",
         "    dtype=dtype,  # 데이터 타입을 설정합니다.\n",
         "    load_in_4bit=load_in_4bit,  # 4bit 양자화 로드 여부를 설정합니다.\n",
